@startuml

title Class Diagram - Who Wants to Be a Knowledge Bank

class QuizData {
  - question: String
  - options: List<String>
  - correctAnswer: String
  - category: QuizCategory
}

class JokeData {
  - setup: String
  - delivery: String
}

class ScoreNode {
  - playerName: String
  - dateTime: LocalDateTime
  - score: int
  - total: int
  - next: ScoreNode
}

class ScoreTracker {
  - totalAttempts: int
  - correctAnswers: int
}

class DataSaver<T>
class AsyncFetcher<T>
class QuizJokeApp
class QuizFetcher
class JokeFetcher
class InternetChecker

QuizJokeApp --> QuizData
QuizJokeApp --> JokeData
QuizJokeApp --> ScoreTracker
QuizJokeApp --> ScoreNode
QuizJokeApp --> QuizFetcher
QuizJokeApp --> JokeFetcher
QuizJokeApp --> DataSaver
QuizJokeApp --> AsyncFetcher

QuizFetcher --> QuizData
JokeFetcher --> JokeData
ScoreNode --> ScoreNode : next

@enduml
